<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_gallery_app"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/buttonWebBrowser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_web_browser"
        android:layout_below="@+id/buttonGallery"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/buttonMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_map"
        android:layout_below="@+id/buttonWebBrowser"
        android:onClick="onClick" />
    <Button
        android:id="@+id/buttonGalleryImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_gallery_image"
        android:layout_below="@+id/buttonMap"
        android:onClick="onClick" />
    <Button
        android:id="@+id/buttonCameraPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_make_photo"
        android:layout_toRightOf="@+id/buttonWebBrowser"
        android:layout_toEndOf="@+id/buttonWebBrowser"
        android:onClick="onClick" />
    <Button
        android:id="@+id/buttonCameraVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_record_video"
        android:layout_below="@+id/buttonCameraPhoto"
        android:layout_toRightOf="@+id/buttonWebBrowser"
        android:layout_toEndOf="@+id/buttonWebBrowser"
        android:onClick="onClick" />
    <Button
        android:id="@+id/buttonDictaphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_voice_recording"
        android:layout_below="@+id/buttonCameraVideo"
        android:layout_toRightOf="@+id/buttonWebBrowser"
        android:layout_toEndOf="@+id/buttonWebBrowser"
        android:onClick="onClick" />

</RelativeLayout>
